20150128
========
- Added expiration for documents
- Documents are now inside database
- Improved code reutilization
- Add admin mode
- You can delete documents in admin mode

20140128
========
- Solved bug with mail dates.
- Added autoupdate tables in frmSettings
- Report shows document internal id

20130711
========
- Solved bug with weekday in mail date

20130710
========
- Solved bug when changing web server port
- Mail shows datetime in interantional format
- Closed docs can be searched by month and year
- Datetime view doesn't cut 00 seconds
- members is now a set, not a list

20130208
========
- User and Group combos changed to lists, improving user interface.
- frmMain now update tables automatically.
- Bottle.py remove from project, you must use the bottle.py distribution.
- Adding new document checks if the file selected is really a file.
- Improved user interface

20130116
========
- Script added to make backups. It can be launched from console and from UI.
- Bug solved when sending mail without comment

20130114
========
- Documents are now generated in /tmp/didyoureadme
- Open documents and reports have been improved
- You can add several lines in document comment
- The title of the document is now mandatory


20130108
========
- First version, full functional.