@@ -6,3 +6,5 @@ didyoureadme-20130710 <==> svn -r 37 checkout svn://svn.code.sf.net/p/didyouread
 didyoureadme-20130711 <==> svn -r 39 checkout svn://svn.code.sf.net/p/didyoureadme/code/trunk didyoureadme
 didyoureadme-20140128 <==> svn -r 43 checkout svn://svn.code.sf.net/p/didyoureadme/code/trunk didyoureadme
 didyoureadme-20150128 <==> svn -r 58 checkout svn://svn.code.sf.net/p/didyoureadme/code/trunk didyoureadme
+didyoureadme-20160521 <==> svn -r 102 checkout svn://svn.code.sf.net/p/didyoureadme/code/trunk didyoureadme
+
