@@ -15,7 +15,7 @@ from PyQt5.QtWidgets import *
 import http.server
 import socketserver
 
-version="20160520"
+version="20160521"
 version_date=datetime.date(int(version[0:4]),int(version[4:6]), int(version[6:8]))
 
 dirTmp=os.path.expanduser("~/.didyoureadme/tmp/").replace("\\", "/")#The replace is for windows, but works in linux
